tests/snapshots/pager__resized-taller.snap
---
source: tests/pager.rs
expression: "screen_text(&term, 80, 20, \"taller\")"
---
 1│  Section 6                             │
 2│  ━━━━━━━━━───────────────────────────  │
 3│                                        │
 4│  Paragraph 6 has a few words of text   │
 5│  in it.                                │
 6│                                        │
 7│  Section 7                             │
 8│  ━━━━━━━━━───────────────────────────  │
 9│                                        │
10│  Paragraph 7 has a few words of text   │
11│  in it.                                │
12│                                        │
13│  Section 8                             │
14│  ━━━━━━━━━───────────────────────────  │
15│                                        │
16│  Paragraph 8 has a few words of text   │
17│  in it.                                │
18│                                        │
19│  Section 9                             │
20│  ━━━━━━━━━───────────────────────────  │
21│                                        │
22│  Paragraph 9 has a few words of text   │
23│  in it.                                │
24│                                        │
25│  Section 10                            │
26│  ━━━━━━━━━━──────────────────────────  │
27│                                        │
28│  Paragraph 10 has a few words of text  │
29│  in it.                                │
30│ text › … › Section 6      L 33/121 50% │
