tests/snapshots/pager__search-wrapped.snap
---
source: tests/pager.rs
expression: "screen_text(&term, 30, 8, \"found\")"
---
 1│  Some words here and the     │
  │                      ^^^│
 2│  quick brown fox jumps over  │
  │  ^^^^^^^^^^^│
 3│  the lazy dog many times.    │
 4│                              │
 5│                              │
 6│                              │
 7│                              │
 8│ text         1/1  L 1/3 100% │
