tests/snapshots/pager__visual-one-line.snap
---
source: tests/pager.rs
expression: render(&screen)
---
 1│   Guide                                                    │
  │  ========================================================│
 2│                                                            │
 3│  Intro with a link and x² inline.                          │
 4│                                                            │
 5│                                                     rust   │
 6│   fn main() {}                                             │
 7│   let x = 1;                                               │
 8│                                                            │
 9│                                                            │
10│                          E = mc²                           │
11│                                                            │
12│  ╭───┬───╮                                                 │
13│  │ a │ b │                                                 │
14│  ├───┼───┤                                                 │
15│  │ 1 │ 2 │                                                 │
16│ -- VISUAL --  1 line, 1 block                   L 1/28 53% │
